src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceCannotDependSelf.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.interfaces;

import java.util.List;
import java.lang.String;

public interface InterfaceCannotDependSelf extends List<String> {

}
